Merge add-bets-for-tic-tac-toe into dev (#50)