@@ -1,5 +1,6 @@
 package com.security_starter.config;
 
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnMissingBean;
 import org.springframework.context.annotation.Bean;
@@ -8,10 +9,10 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
+@RequiredArgsConstructor
 @Slf4j
 public class CorsConfig {
 
@@ -19,10 +20,10 @@ public class CorsConfig {
     @ConditionalOnMissingBean(CorsConfigurationSource.class)
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration() {{
-            setAllowedOriginPatterns(Arrays.asList("http://localhost:*", "https://localhost:*"));
-            setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+            setAllowedOrigins(List.of("http://localhost:5173", "https://localhost:5173"));
+            setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
             setAllowedHeaders(List.of("*"));
-            setExposedHeaders(Arrays.asList("Authorization", "Content-Type"));
+            setExposedHeaders(List.of("Authorization", "Content-Type"));
             setAllowCredentials(true);
             setMaxAge(3600L);
         }};
